Onyx - Fixing spacing for article icons [#40 state:resolved] - Fixing possible module issues with wright overrides

--- a/trunk/css/1_template.css
+++ b/trunk/css/1_template.css
@@ -201,6 +201,10 @@
 	font-weight: normal;
 }
 
+#container h2.contentheading {
+	float: left;
+}
+
 #main {
 	padding: 10px 0 20px 0;
 	line-height: 1.5em;
@@ -320,6 +324,8 @@
 	font-size: 8px;
 	padding: 0 2px;
 	float: right;
+	padding-top: 24px;
+	margin-bottom: 0;
 }
 
 .buttonheading img {
